@@ -2,5 +2,4 @@ TODO
 
 -re-check sides (curbs, sand, grass, etc)
 -re-check borders, fences
--add turn marks
 -add stadiums
