@@ -3,6 +3,7 @@ v0.3
     - make cars "shiny" (Andrew Sumner)
     - increased friction (Andrew Sumner)
     - added cameras
+    - added turn marks (need graphic work still)
         
 v0.2
     - removed jittering hole on right border of Hunaudieres (thx Mart Kelder)
